gtk: Disable tooltips in keyboard-grabbing mode.

* gtk+-2:/pinentry-gtk-2.c (show_hide_button): Do not show the
tooltip if we attempt to grab the keyboard.
(create_window): Likewise.
--

For unclear reasons, those tooltips may interfere with grabbing
under some tiling window managers.

GnuPG-bug-id: 3297
Signed-off-by: Damien Goutte-Gattat <dgouttegattat@incenp.org>